# SO1_2S2024_202010044

Proyecto1/: readme.MD
Proyecto1/container_service/: Cargo.toml
Proyecto1/container_service/src/: main.rs
Proyecto1/modulo/: .Module.symvers.cmd  .basic.ko.cmd  .basic.mod.cmd  .basic.mod.o.cmd  .basic.o.cmd  .modules.order.cmd  Makefile  basic.c  basic.ko  basic.mod.c  modules.order
Proyecto1/scripts/: crearCronjob.sh  eliminarCon.sh  eliminarCronjob.sh  generarCon.sh
Proyecto1/scripts/imagenH1/: main.py
Proyecto1/scripts/imagenH2/: main.py
Proyecto1/scripts/imagenL1/: Dockerfile
Proyecto1/scripts/imagenL2/: Dockerfile  main.py
Proyecto1/scripts/imagenLogs/: Dockerfile  docker-compose.yaml  main.py  puebas.py  requirements.txt
Proyecto1/scripts/imagenLogs/env/: pyvenv.cfg
Proyecto2/gRPC/: readme.md
Proyecto2/gRPC/golang-client/: Dockerfile  go.mod  main.go
Proyecto2/gRPC/golang-server/: Dockerfile  go.mod  main.go
Proyecto2/gRPC/grafana-prometeus/: readme.md
Proyecto2/gRPC/ingress/: readme.md
Proyecto2/gRPC/kafka/: consumer.yaml  producer.yaml  readme.md
Proyecto2/gRPC/kubernetes/: consumer-loser.yaml  goClient.yaml  goServer-Boxing.yaml  goServer-Running.yaml  goServer-Swiming.yaml  ingress.yaml  redis.yaml  rustClient.yaml
Proyecto2/gRPC/locust/: app.py  datos.json  requirements.txt
Proyecto2/gRPC/rust-client/: Cargo.toml  Dockerfile
Tarea2/: generarCon.sh  readme.MD
Tarea2/imagenL1/env/: pyvenv.cfg
Tarea3/: readme.MD
Tarea3/container_service/: Cargo.toml
Tarea3/container_service/src/: main.rs
(+20 files in other folders)
