[package]
name = "container_service"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
reqwest = { version = "0.11", features = ["default","blocking","cookies","socks","json"] }
tokio = { version = "1", features = ["full"] }
mini-redis = "0.4"
ctrlc = "3.2"